# deep-danbooru

./: .gitmodules  Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
projects/deep-danbooru/: Cargo.toml  Readme.md
projects/deep-danbooru/data/: Readme.md
projects/deep-danbooru/src/: lib.rs
projects/deep-danbooru/src/models/: Readme.md  basic.rs  bottleneck.rs  head.rs  mod.rs  tags.txt  tags2019.rs  tags2021.rs
projects/deep-danbooru/src/tags2rust/: mod.rs
projects/deep-danbooru/src/utils/: mod.rs
projects/deep-danbooru/tests/: main.rs
