[package]
name = "deep-danbooru"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Multi-labels anime image classification in rust"
repository = "https://github.com/libwaifu/deep-danbooru"
documentation = "https://docs.rs/deep-danbooru"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
itertools = "0.10.5"

[dependencies.image]
version = "0.24.5"
default-features = false

[dependencies.ort]
version = "1.14.1"
default-features = false

[dev-dependencies]

[features]
default = []
